feat: Setup koin for di

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ dita.dev.ApplicationKt.module ]
+        modules = [dita.dev.ApplicationKt.main]
     }
 }
