feat: Add login/logout feature

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -1,9 +1,24 @@
 ktor {
     deployment {
+        host = "localhost"
+        host = ${?HOST}
         port = 8080
         port = ${?PORT}
+        autoreload = true
     }
     application {
         modules = [dita.dev.ApplicationKt.main]
     }
+}
+
+session {
+    encrypt_key = "00112233445566778899aabbccddeeff"
+    encrypt_key = ${?ENCRYPT_KEY}
+    auth_key = "6819b57a326945c1968f45236581"
+    auth_key = ${?AUTH_KEY}
+}
+
+auth {
+    basic_user = ${?BASIC_USER}
+    basic_password = ${?BASIC_PASSWORD}
 }
