--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Setup environment variables
       env: # Or as an environment variable
         SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
-        GRADLE_LOCAL_PROPERTIES: ${{ secrets.GRADLE_LOCAL_PROPERTIES }}
-      run: echo $SERVICE_ACCOUNT > google-credentials.json && echo $GRADLE_LOCAL_PROPERTIES > gradle-local.properties
+        ENV_FILE: ${{ secrets.ENV_FILE }}
+      run: echo $SERVICE_ACCOUNT > google-credentials.json && echo $ENV_FILE > .env
     - uses: eskatos/gradle-command-action@v1
       with:
         wrapper-cache-enabled: true
