--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ jobs:
     - name: Setup environment variables
       env: # Or as an environment variable
         SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
-        ENV_FILE: ${{ secrets.ENV_FILE }}
-      run: echo $SERVICE_ACCOUNT > google-credentials.json && echo $ENV_FILE > .env
+      run: echo $SERVICE_ACCOUNT > google-credentials.json
     - uses: eskatos/gradle-command-action@v1
+      env:
+        FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
       with:
         wrapper-cache-enabled: true
         dependencies-cache-enabled: true
